2013-08-01  Vanessa Gil <vanessa.gil@artica.es>

	* include/ajax/license.php: Added file.

2013-08-01  Vanessa Gil <vanessa.gil@artica.es>

	* integria_db.sql
	  integria_dbdata.sql
	  extras/migrate.sql
	  godmode/setup/setup.php
	  include/functions_db.mysql.php
	  include/js/integria.js
	  include/styles/integria.css: Added keygen.
	
	* images/license_key.png
	  include/js/jquery.jquery-ui-1.1.0.custom.js
	  include/styles/jquery-ui-1.10.0.custom.css: Added files.


2013-07-31  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* include/integria_cron.php: Changed a deprecated
	function.
	
	* integria_dbdata.sql
	  integria_demo.sql: Added the default values for
	the new maintenance config tokens.
	
	* godmode/setup/setup_maintenance.php: New file.
	Setup section where config the days to delete
	some old data.
	
	* godmode/setup/incidents_setup.php
	  godmode/setup/setup.php
	  godmode/setup/setup_auth.php
	  godmode/setup/setup_crm.php
	  godmode/setup/setup_mail.php
	  godmode/setup/setup_mailtemplates.php
	  godmode/setup/setup_pandora.php
	  godmode/setup/setup_visual.php: Added the tab
	of the new maintenance setup section.

2013-07-31  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* include/functions_tasks.php: Visual changes
	on the task tree view.
	
	* operation/projects/task.php: Visual changes
	on the task tree view. ACL improved. Fixed a bug.

2013-07-30  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* include/functions_form.php: Deleted traces of
	the old 'id_group' of "ttask" in the functions
	"combo_users_task" and "show_workunit_user".
	
	* operation/projects/task_detail.php: Fixed a
	bug that appears when creating a task without
	parent. Now the only users that can create a
	task without parent are the project managers.
	
	* operation/projects/task_emailreport.php: Now
	the permission to access to this task is "task
	manager".
	
	* operation/side_menu.php: Fixed some bugs related
	with the highlighting of some side menu elements.